--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -50,6 +50,13 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
+    - if: matrix.language == 'java' 
+      name: Setup Java
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: 15
+
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
@@ -65,12 +72,9 @@ jobs:
     #- run: |
     #   make bootstrap
     #   make release
-    - run: |
-      echo "java version"
-      java -version
-      uses: actions/setup-java@v1
-      with:
-        java-version: 15
+    #- run: |
+    #  echo "java version"
+    #  java -version
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
